# exoshell

./: Cargo.toml  LICENSE  README.md  exoshell.pyi  pyproject.toml
src/: banner.rs  console.rs  error.rs  history.rs  lib.rs  mode.rs  path.rs  shell.rs
