[package]
name = "exoshell"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exoshell"
crate-type = ["cdylib"]

[dependencies]
boxy = "0.1.0"
crossterm = "0.28.1"
pyo3 = "0.23.3"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.0"
