[package]
name = "exoshell"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exoshell"
crate-type = ["cdylib"]

[dependencies]
boxy = "0.1.0"
crossterm = "0.28.1"
dirs = "6.0.0"
env_logger = "0.11.6"
log = "0.4.25"
pyo3 = "0.23.3"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.11"
unicode-width = "0.2.0"
