[project]
name = "exoshell"
version = "0.3.1"
description = "A console for the terminal, written in rust."
readme = "README.md"
authors = [
    { name = "1borgy", email = "149747415+1borgy@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
module-name = "exoshell"
python-packages = ["exoshell"]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
